v0.1.1: post-review correctness fixes
Applies Codex + CodeRabbit review findings from v0.1.0.

Critical (Codex):
  - api not implementation for billing + lifecycle + annotation deps
    (public surface leaks BillingResult/ProductDetails/Purchase/Lifecycle)
  - Skip on-device signature check when license key null/empty
    (previously rejected every purchase under default config)
  - List.of / List.copyOf -> Collections.singletonList / unmodifiableList(new ArrayList)
    (Java 9 APIs crash on Android without core-library desugaring)
  - Do not clear fetchedProductInfoList mid-flight; clear once before
    INAPP/SUBS queries start, append results (previously sibling clobbered)
  - Decrement productDetailsQueriesPending on empty-product branch
    (stuck counter blocked purchase reconciliation)
  - connect() when already ready: re-run product + purchase queries
    (restorePurchases / onResume refresh was a silent no-op)
  - Capture launchBillingFlow non-OK BillingResult, surface via onBillingError
    (Play can refuse the launch synchronously for stale offer tokens / bad Activity)

CodeRabbit must-fixes:
  - Security.java: explicit UTF-8 for signedData.getBytes (platform-default could break)
  - IdempotencyStore: commit() not apply() (async write could lose dedupe record on crash)
  - consumer-rules.pro: keep all members, not just class names (Billing uses reflection)
  - OfferSelector javadoc: "contains" not "starts with" to match implementation
  - ProductInfo constructor: @NonNull on skuProductType
  - LICENSE: full Apache-2.0 text (was short-form header)
  - MainActivity.onDestroy: clear listener to avoid Activity leak
  - README: "permissively licensed (Apache-2.0)" not "MIT-free-ish"
  - CHANGELOG: reword "previously capped" for initial release

Bumped artifact version 0.1.0 -> 0.1.1.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>